# django-camel-spitter

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
camel_spitter/: apps.py  db_filter.py  db_handler.py  models.py
tests/: models.py  settings.py  test_basic_logger.py  test_extended_logger.py
tests/migrations/: 0001_initial.py
