[tool.poetry]
name = "django-camel-spitter"
version = "0.3.1"
description = ""
authors = ["Adam Žúrek <adamzurek14@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-flake8 = "^1.0.6"
pytest-cov = "^2.10.0"
pytest-django = "^3.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
